omni/tests/goldens/types/unknown_type_06.omni
let value6:Mystery6 = 1
